# tinysim

./: .gitignore  CMakeLists.txt  README.md
cmake/: ArduinoToCXX.cmake
examples/tinytest/: CMakeLists.txt  tinytest.ino
include/: Arduino.h  SPI.h  TinyScreen.h  Wire.h
include/avr/: pgmspace.h
src/: CMakeLists.txt  Makefile  TinyScreen.cpp  main.c  main.cpp  simssd1331.cpp  simssd1331.h  simtinyscreen.cpp  simtinyscreen.h  simwire.cpp  spisim.cpp  test.cpp  tinysim.c  tinysim.cpp  tinysim.h
